--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "analytics-script",
     "version": "0.1.0",
-    "description": "Lightweight analytics script tags for web/Next.js (Plausible, Umami, Google Analytics, DataFast, OpenPanel, etc.)",
+    "description": "Lightweight analytics script tags for React/Next.js applications (Plausible, Umami, Google Analytics, DataFast, OpenPanel, etc.)",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
@@ -32,7 +32,7 @@
     "bugs": {
         "url": "https://github.com/iamcorey/analytics-script/issues"
     },
-    "homepage": "https://github.com/iamcorey/analytics-script#readme",
+    "homepage": "https://github.com/iamcorey/analytics-script",
     "devDependencies": {
         "@types/node": "^20.11.0",
         "@types/react": "^18.3.0",
