--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "license": "MIT",
     "keywords": [
         "analytics",
+        "tracking",
         "script",
+        "react",
+        "nextjs",
         "plausible",
         "umami",
-        "google analytics",
+        "google-analytics",
         "datafast",
         "openpanel",
-        "nextjs",
-        "tag"
+        "web-analytics",
+        "privacy-focused"
     ],
     "repository": {
         "type": "git",
@@ -38,7 +41,7 @@
         "@types/react": "^18.3.0",
         "typescript": "^5.6.0"
     },
-    "dependencies": {
-        "react": "^19.2.0"
+    "peerDependencies": {
+        "react": ">=16.8.0"
     }
 }
