feat: add crisp chat support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "analytics-script",
     "version": "0.6.0",
-    "description": "Lightweight analytics script tags for React/Next.js applications (Plausible, Umami, Google Analytics, DataFast, OpenPanel, etc.)",
+    "description": "Lightweight analytics script tags for React/Next.js applications (Plausible, Umami, Google Analytics, DataFast, Mixpanel, Crisp, etc.)",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
@@ -25,6 +25,10 @@
         "google-analytics",
         "datafast",
         "openpanel",
+        "mixpanel",
+        "crisp",
+        "chat",
+        "customer-support",
         "web-analytics",
         "privacy-focused"
     ],
